@@ -43,6 +43,8 @@ namespace itpp {
   {
     int tmp;
     input >> tmp;
+    it_assert((tmp == 0) || (tmp == 1),
+              "bin::operator>>(): input value must be 0 or 1");
     outbin = tmp;
     return input;
   }
